Java 17 and tomcat 10.1 core upgrade